--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -74,4 +74,6 @@ TPL_JS_WRIGHT_NO_STYLES="No hay estilos para esta plantilla"
 ; Compile LESS
 TPL_JS_WRIGHT_COMPILE_LESS="Compilar LESS a CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="¡Ha habido un error!"
-TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="¡Estilo personalizado compilado!"
+TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="¡Estilo personalizado compilado!"'
+TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="¡Importante!"
+TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Si modificas alguno de los colores de arriba o eliges el estilo 'Personalizado' por primera vez, guarda cambios primero, luego haz click en este botón para generar el CSS"
