--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -76,4 +76,4 @@ TPL_JS_WRIGHT_COMPILE_LESS="LESS zu CSS kompilieren"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="Es gab einen Fehler!"
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom Style zusammengestellt!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Wichtig!"
-TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Wenn Sie eine der oben genannten Farben ändern oder zum ersten Mal 'Custom' auswählen, speichern Sie zuerst die Änderungen und klicken Sie auf diese Schaltfläche, um das CSS neu zu erstellen"
+TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Wenn Sie eine der oben genannten Farben ändern oder zum ersten Mal 'Custom' auswählen, speichern Sie zuerst die Änderungen und klicken Sie dann auf diese Schaltfläche, um das CSS neu zu erstellen"
