--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -74,4 +74,4 @@ TPL_JS_WRIGHT_COMPILE_LESS="Compile LESS to CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="There was an error!"
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom style compiled!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Important!"
-TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="If you modify any of the colors above or selected 'Custom' style for the first time, save changes first, then click this button to rebuild the CSS"
+TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="If you modify any of the colors above or select 'Custom' style for the first time, save changes first, then click this button to rebuild the CSS"
