--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -75,4 +75,4 @@ TPL_JS_WRIGHT_COMPILE_LESS="Compilar LESS a CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="¡Ha habido un error!"
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="¡Estilo personalizado compilado!"'
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="¡Importante!"
-TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Si modificas alguno de los colores de arriba o eliges el estilo 'Personalizado' por primera vez, guarda cambios primero, luego haz click en este botón para generar el CSS"
+TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Guarda cambios primero, luego haz click en este botón para generar el CSS"
