--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -70,6 +70,7 @@ TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Ersetzen Sie das Hamburger Symbol in ein Et
 ; Compile LESS
 TPL_JS_WRIGHT_COMPILE_LESS="LESS zu CSS kompilieren"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="Es gab einen Fehler!"
+TPL_JS_WRIGHT_COMPILE_LESS_COMPILING="LESS kompilieren..."
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom Style zusammengestellt!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Wichtig!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Speichern Sie zuerst die Änderungen und klicken Sie dann auf diese Schaltfläche, um das CSS neu zu erstellen"
