--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -68,6 +68,7 @@ TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon to a label"
 ; Compile LESS
 TPL_JS_WRIGHT_COMPILE_LESS="Compile LESS to CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="There was an error!"
+TPL_JS_WRIGHT_COMPILE_LESS_COMPILING="Compiling LESS..."
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom style compiled!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Important!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Save changes first, then click this button to rebuild the CSS"
