--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -70,6 +70,7 @@ TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Sustituir icono de hamburguesa por texto"
 ; Compilar LESS
 TPL_JS_WRIGHT_COMPILE_LESS="Compilar LESS a CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="¡Ha habido un error!"
+TPL_JS_WRIGHT_COMPILE_LESS_COMPILING="Compilando LESS..."
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="¡Estilo personalizado compilado!"'
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="¡Importante!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Guarda cambios primero, luego haz click en este botón para generar el CSS"
