--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -13,6 +13,8 @@ TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Branding entfernen"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="Diese Einstellungen entfernt das Branding aus der Fusszeile des Templates."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Gestaltung"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Wähle aus, welche der Gestaltungsvariationen du benutzen möchtest."
+TPL_JS_WRIGHT_FIELD_STYLE_LINK_COLOR_LABEL="Farbschema"
+TPL_JS_WRIGHT_FIELD_STYLE_LINK_COLOR_DESC="Wählen Sie ein benutzerdefiniertes Farbschema"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Legen modale Verhalten"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Verwenden Sie den modalen Klasse in einen beliebigen Link-Tag zu öffnen Pop-ups statt neuer Fenster"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Logo Bild"
