--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -13,6 +13,8 @@ TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Eliminar marca"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="Permite ocultar la marca por del pie de página del template."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Estilo"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Selecciona qué variaciones de estilos te gustaría utilizar."
+TPL_JS_WRIGHT_FIELD_STYLE_LINK_COLOR_LABEL="Esquema de color"
+TPL_JS_WRIGHT_FIELD_STYLE_LINK_COLOR_DESC="Elige un esquema de color"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Cargar la función modal"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Permitir usar la clase modal en cualquier link para abrir un pop up en vez de una ventana nueva"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Imagen para el Logo"
