--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -76,3 +76,4 @@ TPL_JS_WRIGHT_COMPILE_LESS_COMPILING="LESS kompilieren..."
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom Style zusammengestellt!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Wichtig!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Speichern Sie zuerst die Änderungen und klicken Sie dann auf diese Schaltfläche, um das CSS neu zu erstellen"
+TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Ändern und kompilieren Sie den benutzerdefinierten Stil aus <strong><a href="%s" target="_blank">diesem Vorlagenstil <span class="icon-out-2"></span></a></strong>"
