--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -72,3 +72,4 @@ TPL_JS_WRIGHT_COMPILE_LESS_COMPILING="Compiling LESS..."
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom style compiled!"
 TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Important!"
 TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="Save changes first, then click this button to rebuild the CSS"
+TPL_JS_WRIGHT_COMPILE_LESS_MODIFY_CUSTOM_STYLE="Modify and compile the Custom style from <strong><a href="%s" target="_blank">this template style <span class="icon-out-2"></span></a></strong>"
